@@ -1,3 +1,7 @@
+2012-05-21 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* mpn/generic/toom8_sqr.c: Reduce branches for recursion.
+
 2012-05-20  Torbjorn Granlund  <tege@gmplib.org>
 
 	* tests/mpz/t-gcd.c: Rewrite.
